@@ -74,6 +74,7 @@ More existing APIs will be migrated to this new common pattern.
 - https://github.com/eclipse-sirius/sirius-web/issues/3672[#3672] [forms] Fix an issue preventing the deletion of a list item
 - https://github.com/eclipse-sirius/sirius-web/issues/3589[#3589] [diagram] Add missing migration participant for diagram representation
 - https://github.com/eclipse-sirius/sirius-web/issues/3668[#3668] [diagram] Fix an issue that would cause wrapped label to overflow its container
+- https://github.com/eclipse-sirius/sirius-web/issues/3709[#3709] [domain] Add a conditional edge style for containment references
 
 === New Features
 
